--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "latest",
+    "viem": "^2.31.7",
+    "wagmi": "^2.15.6",
     "zod": "^3.24.1"
   },
   "devDependencies": {
