--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
     "@supabase/supabase-js": "latest",
+    "@wagmi/connectors": "^5.8.5",
+    "@wagmi/core": "^2.17.3",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -60,7 +62,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "latest",
     "viem": "^2.31.7",
-    "wagmi": "^2.15.6",
+    "wagmi": "2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
