--- a/.env.local
+++ b/.env.local
@@ -13,5 +13,5 @@ NEXT_PUBLIC_LINE_LIFF_ID=2007685321-GAZ5nbEm
 NEXT_PUBLIC_LINE_CHANNEL_ID=2007685321
 
 # === Wagmi / Viem (Opsional jika pakai infura, alchemy, dsb) ===
-NEXT_PUBLIC_CHAIN_ID=1
+NEXT_PUBLIC_CHAIN_ID=1001
 NEXT_PUBLIC_RPC_URL=https://mainnet.infura.io/v3/your-infura-project-id
